--- a/portal/templates/portal/test-settings/basic-settings.html
+++ b/portal/templates/portal/test-settings/basic-settings.html
@@ -4,6 +4,9 @@
 <html lang="en">
   <head>
     <title>Sokalp - Basic settings</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'portal/basic-settings.css' %}" />
     <link rel="icon" type="image/x-icon" href="{% static 'portal/favicon.png' %}">
   </head>
