--- a/portal/templates/portal/test-settings/questions-manager.html
+++ b/portal/templates/portal/test-settings/questions-manager.html
@@ -1,47 +1,18 @@
 {% load static %}
-{% load custom_filters %}
 
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Sokalp - Time settings</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'portal/time-settings.css' %}" />
+    <title>Sokalp - Test settings</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6..1/css/all.min.css" />
+    <link rel="stylesheet" href="{% static 'portal/questions-manager.css' %}" />
     <link rel="icon" type="image/x-icon" href="{% static 'portal/favicon.png' %}">
   </head>
   <body class="bg-slate-100 tracking-wide leading-4 w-screen">
-    <div class="spinner-wrapper" style='display: none'>
-      <div class="spinner-border text-primary" role='status'>
-        <span class="visually-hidden" style='color:white; font-size:18px'>Chaning Time...</span>
-      </div>
-    </div>
-    {% csrf_token %}
-    <style>
-      .spinner-wrapper {
-        background-color: rgba(0, 0, 0, 0.3);
-        position: fixed;
-        top: 0;
-        left:0;
-        width: 100%;
-        height: 100%;
-        z-index:9999;
-        display: flex;
-        justify-content: center;
-      }
-    
-      .spinner-border {
-        height: 60px;
-        width: 60px;
-        margin-top: 30vh;
-      }
-    
-    </style>
     <div
       class="upper-nav-bar ml-[80px] bg-white flex justify-between items-center"
     >
-      <h1 class="font-semibold p-4 text-base">{{test.test_name}}</h1>
+      <h1 class="font-semibold p-4 text-base">{{tests.test_name}}</h1>
       <div
         class="flex gap-2 items-center text-gray-500 p-4 hover:bg-slate-200 h-full"
       >
@@ -151,9 +122,8 @@
             </svg>
           </button>
         </div>
-        <a
+        <button
           class="flex items-center gap-3 text-gray-500 hover:text-red-500 font-semibold"
-          href='{% url "logout" %}'
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -169,7 +139,7 @@
               d="M7.5 7.5h-.75A2.25 2.25 0 0 0 4.5 9.75v7.5a2.25 2.25 0 0 0 2.25 2.25h7.5a2.25 2.25 0 0 0 2.25-2.25v-7.5a2.25 2.25 0 0 0-2.25-2.25h-.75m-6 3.75 3 3m0 0 3-3m-3 3V1.5m6 9h.75a2.25 2.25 0 0 1 2.25 2.25v7.5a2.25 2.25 0 0 1-2.25 2.25h-7.5a2.25 2.25 0 0 1-2.25-2.25v-.75"
             />
           </svg>
-        </a>
+        </button>
       </div>
       <div class="flex mt-7 items-baseline gap-6 w-screen">
         <div class="ml-[96px] mt-2 flex flex-col gap-6 w-[260px]">
@@ -180,7 +150,7 @@
           <h1 class="font-bold text-[18px]">Test configuration</h1>
           <ul class="list-none">
             <li>
-              <a href="{% url 'basic-settings' test.id %}">
+              <a href="{% url 'basic-settings' tests.id %}">
                 <div class="p-3 flex items-center group hover:bg-white gap-3">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -210,9 +180,36 @@
               </a>
             </li>
             <li>
-              <a href="{% url 'edit-test' test.id %}">
+              <a href="{% url 'edit-test' tests.id %}">
                 <div
-                  class="p-3 flex items-center gap-3 rounded-md group hover:bg-white"
+                  class="p-3 flex items-center shadow-sm gap-3 rounded-md group bg-white"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-6 h-6 stroke-orange-400"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z"
+                    />
+                  </svg>
+                  <p
+                    class="text-[14px] text-black font-semibold"
+                  >
+                    Questions manager
+                  </p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="{% url 'time-settings' tests.id %}">
+                <div
+                  class="p-3 flex  items-center group hover:bg-white gap-3 rounded-md"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -225,42 +222,17 @@
                     <path
                       stroke-linecap="round"
                       stroke-linejoin="round"
-                      d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z"
+                      d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
                     />
                   </svg>
-                  <p
-                    class="text-[14px] text-slate-500 group-hover:text-black font-semibold"
-                  >
-                    Questions manager
+                  <p class="text-[14px] text-slate-500 group-hover:text-black font-semibold">
+                    Time settings
                   </p>
                 </div>
               </a>
             </li>
             <li>
-              <div
-                class="p-3 flex shadow-sm items-center gap-3 bg-white rounded-md"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="currentColor"
-                  class="w-6 h-6 stroke-orange-400"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
-                  />
-                </svg>
-                <p class="text-[14px] group-hover:text-black font-semibold">
-                  Time settings
-                </p>
-              </div>
-            </li>
-            <li>
-              <a href="{% url 'user-details' test.id %}">
+              <a href="{% url 'user-details' tests.id %}">
                 <div
                   class="p-3 flex items-center gap-3 rounded-md group hover:bg-white"
                 >
@@ -288,36 +260,67 @@
             </li>
           </ul>
         </div>
-        <div class="mt-2 px-[8px] flex-grow flex flex-col gap-6 mr-4">
-          <h1 class="font-semibold text-[18px] mb-4">Time settings</h1>
-
-          <div class="bg-white p-5 rounded-md flex-1 flex flex-col gap-3">
-            <h1 class="font-semibold leading-6 text-[13px] mb-6">
-              TEST DURATION
-            </h1>
-            <label
-              for="time-input"
-              class="text-black leading-2 font-normal text-base mb-1"
-              >Time to complete the test: (hh:mm:ss)</label
-            >
-            <input type="time" style='accent-color:#fb923c;' step="1" name="time-test" id='time-test' class='time-test border-b-2 mb-4 text-[17px] hover:border-slate-500 focus:border-orange-400 outline-none text-slate-500' data-mydata="{{test.id}}" value='{{ test.id|time }}'>
-            {% comment %} <input
-              type="time"
-              class="border-b-2 mb-4 text-[17px] hover:border-slate-500 focus:border-orange-400 outline-none text-slate-500"
-              name="time-input"
-              id="time-input"
-              value="{{test.id|time}}"
-            /> {% endcomment %}
+        <div class="mt-2  flex-grow flex flex-col gap-5 mr-8">
+          <div class="flex justify-between items-center mb-4">
+            <h1 class="font-semibold text-[18px]">Questions manager</h1>
+            <div class="flex gap-[1.25px]">
+              <button
+              class="bg-orange-400 text-white px-4 py-[12px] font-semibold text-[18px] rounded-tr-none rounded-br-none rounded-lg hover:bg-orange-500"
+            >                    
+              Add question         
+            </button>
+            <button
+              class="bg-orange-400 text-white px-4 py-[12px] font-semibold text-[18px] rounded-tl-none rounded-bl-none rounded-md hover:bg-orange-500"
+            >                    
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+              <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+            </svg>        
+            </button>
           </div>
-          <button
-            id='butt'
-            class="bg-orange-400 w-20 inline-block text-white px-4 py-[12px] font-semibold text-[18px] rounded-lg border-2 hover:bg-orange-500"
-          >
-            Save
-          </button>
-          <script src='{% static "portal/admin.js" %}'></script>
-        </div>
-      </div>
+          </div>
+          <div class="bg-white rounded-md flex-1 flex gap-3 items-center justify-between">
+            <div class="flex gap-4 items-center p-5">
+              <input type="checkbox" id="checkbox-1" class="size-4 p-5">
+              <label for="checkbox-1" class="font-semibold text-[13px]">QUESTIONS {{ questions_len }}</label>
+            </div>
+            <div class="flex items-center p-5 hover:bg-slate-200">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+              </svg>              
+            </div>
+          </div> 
+          {% for question in questions %}
+            <div class="bg-white rounded-md flex-1 flex gap-2 flex-col px-2">
+              <div class="flex gap-4 items-center p-5 justify-between">
+                <div class="flex gap-4">
+                  <input type="checkbox" id="checkbox-1" class="size-4">
+                  <label for="checkbox-1" class="font-semibold text-[16px]">Q. {{forloop.counter}}</label>
+                </div>
+                <p class="text-slate-500">Points: 1</p>
+              </div>
+              <div class="ml-12 mb-4">
+                <p class="text-[18px] leading-6">{{question.question}}</p>
+              </div>
+              <div class='flex flex-col gap-2 mb-6'>
+                <div class="flex gap-4 ml-16 items-center break-words p-3">
+                  <input type="checkbox" id="op1" class="size-4" disabled>
+                  <label for="op1" class="text-[18px] leading-6">{{question.op1}}</label>
+                </div>
+                <div class="flex gap-4 ml-16 items-center break-words p-3">
+                  <input type="checkbox" id="op2" class="size-4" disabled>
+                  <label for="op2" class="text-[18px] leading-6">{{question.op2}}</label>
+                </div>
+                <div class="flex gap-4 ml-16 items-center break-words p-3">
+                  <input type="checkbox" id="op3" class="size-4" disabled>
+                  <label for="op3" class="text-[18px] leading-6">{{question.op3}}</label>
+                </div>
+                <div class="flex gap-4 ml-16 items-center break-words bg-green-300 bg-opacity-25 rounded-md p-3">
+                  <input type="checkbox" id="op4" class="size-4" disabled>
+                  <label for="op4" class="text-[18px] leading-6">{{question.op4}}</label>
+                </div>
+              </div>
+            </div>
+          {% endfor %}
     </div>
   </body>
 </html>
