--- a/portal/templates/portal/user-details.html
+++ b/portal/templates/portal/user-details.html
@@ -5,7 +5,7 @@
 {% block styles %}<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">{% endblock styles %}
 
 {% block content %}
-  <a href="{% url 'admin' %}" class='btn btn-link'><-- Back</a>
+  <a href="{% url 'basic-settings' tests.id  %}" class='btn btn-link'><-- Back</a>
 
   <center>
     <table class='table'>
