--- a/portal/templates/portal/admin_2.html
+++ b/portal/templates/portal/admin_2.html
@@ -218,7 +218,7 @@
                 <p
                   class="ml-3 mt-[23px] text-base text-[16px] leading-6 tracking-wider text-gray-500"
                 >
-                  (no description)
+                  (Test ID: {{test.id}})
                 </p>
                 <div class="flex gap-3 mt-[23px] ml-3 items-center">
                   <svg
