--- a/portal/templates/portal/users-database.html
+++ b/portal/templates/portal/users-database.html
@@ -5,7 +5,11 @@
   <head>
     <title>Sokalp - Users database</title>
     <link rel="stylesheet" href="{% static 'portal/users-database.css' %}" />
-    <link rel="icon" type="image/x-icon" href="{% static 'portal/favicon.png' %}">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="{% static 'portal/favicon.png' %}"
+    />
 
     <style>
       table {
@@ -35,7 +39,9 @@
         class="bg-white p-6 shadow-md fixed top-0 left-0 w-48 h-screen flex flex-col justify-between"
       >
         <div class="">
-          <a href="{% url 'admin' %}"><img src="{% static 'portal/sokalp.png' %}" class="h-auto" alt="" /></a>
+          <a href="{% url 'admin' %}"
+            ><img src="{% static 'portal/sokalp.png' %}" class="h-auto" alt=""
+          /></a>
           <a
             class="flex items-center gap-3 hover:text-orange-400 text-slate-500 font-semibold mt-10"
             href="{% url 'admin' %}"
@@ -56,9 +62,7 @@
             </svg>
             My tests
           </a>
-          <button
-            class="flex items-center gap-3 font-semibold mt-10"
-          >
+          <button class="flex items-center gap-3 font-semibold mt-10">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
@@ -73,7 +77,7 @@
                 d="M15 19.128a9.38 9.38 0 0 0 2.625.372 9.337 9.337 0 0 0 4.121-.952 4.125 4.125 0 0 0-7.533-2.493M15 19.128v-.003c0-1.113-.285-2.16-.786-3.07M15 19.128v.106A12.318 12.318 0 0 1 8.624 21c-2.331 0-4.512-.645-6.374-1.766l-.001-.109a6.375 6.375 0 0 1 11.964-3.07M12 6.375a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0Zm8.25 2.25a2.625 2.625 0 1 1-5.25 0 2.625 2.625 0 0 1 5.25 0Z"
               />
             </svg>
-            <span classs='text-black'>Users</span>
+            <span classs="text-black">Users</span>
           </button>
           <button
             class="flex items-center gap-3 hover:text-orange-400 text-slate-500 font-semibold mt-10"
@@ -144,9 +148,7 @@
       </div>
       <div class="ml-48">
         <div class="flex items-center justify-between mx-8 mt-4">
-          <h1 class="text-xl font-semibold">
-            Users database
-          </h1>
+          <h1 class="text-xl font-semibold">Users database</h1>
           <div class="flex gap-[1.25px]">
             <button
               onclick="changeLoc()"
@@ -155,6 +157,8 @@
               Add user
             </button>
             <button
+              id="modal-button"
+              onclick="showModal()"
               class="bg-orange-400 text-white px-4 py-[12px] font-semibold text-[18px] rounded-tl-none rounded-bl-none rounded-md hover:bg-orange-500"
             >
               <svg
@@ -290,49 +294,124 @@
                 </td>
               </tr>
               {% for user in users %}
-                <tr class="">
-                  <td class="px-3 py-5 text-[14px] text-gray-700">
-                    <input type="checkbox" class="size-4" />
-                  </td>
-                  <td class="px-3 py-5 text-[14px] text-gray-700">
-                    {% if user.test_name == "" %}
-                      -
-                    {% else %}
-                      {{user.test_name}}
-                    {% endif %}
-                  </td>
-                  <td class="px-3 py-5 text-[14px] text-gray-700">
-                    {% if user.first_name == "" %}
-                      -
-                    {% else %}
-                      {{user.first_name|title}}
-                    {% endif %}
-                  </td>
-                  <td class="px-3 py-5 text-[14px] text-gray-700">
-                    {% if user.last_name == "" %}
-                      -
-                    {% else %}
-                      {{user.last_name|title}}
-                    {% endif %}
-                  </td>
-                  <td class="px-3 py-5 text-[14px] text-gray-700">
-                    {% if user.username == "" %}
-                      -
-                    {% else %}
-                      {{user.username}}
-                    {% endif %}
-                  </td>
-                  <td class="px-3 py-5 text-[14px] text-gray-700">
-                    {% if user.email == "" %}
-                      -
-                    {% else %}
-                      {{user.email}}
-                    {% endif %}
-                  </td>
-                </tr>
+              <tr class="">
+                <td class="px-3 py-5 text-[14px] text-gray-700">
+                  <input type="checkbox" class="size-4" />
+                </td>
+                <td class="px-3 py-5 text-[14px] text-gray-700">
+                  {% if user.test_name == "" %}
+                   - 
+                  {% else %} 
+                   {{user.test_name}}
+                  {% endif %}
+                </td>
+                <td class="px-3 py-5 text-[14px] text-gray-700">
+                  {% if user.first_name == "" %} 
+                    - 
+                  {% else %}
+                    {{user.first_name|title}} 
+                  {% endif %}
+                </td>
+                <td class="px-3 py-5 text-[14px] text-gray-700">
+                  {% if user.last_name == "" %} 
+                    - 
+                  {% else %}
+                  {{user.last_name|title}} 
+                  {% endif %}
+                </td>
+                <td class="px-3 py-5 text-[14px] text-gray-700">
+                  {% if user.username == "" %}
+                   - 
+                  {% else %}
+                   {{user.username}} 
+                  {% endif %}
+                </td>
+                <td class="px-3 py-5 text-[14px] text-gray-700">
+                  {% if user.email == "" %}
+                   -
+                  {% else %}
+                   {{user.email}} 
+                  {% endif %}
+                </td>
+              </tr>
               {% endfor %}
             </tbody>
           </table>
+        </div>
+      </div>
+    </div>
+    <div
+      id="modal-sam"
+      class="modal-sam hidden fixed inset-0 bg-black bg-opacity-25 justify-center items-center"
+    >
+      <div class="w-[600px] flex flex-col">
+        <div class="bg-white p-5 rounded">
+          <div>
+            <h1 class="text-[16px] font-semibold">Excel File Upload</h1>
+          </div>
+          <div class="mt-8">
+            <p class="text-[14px]">
+              Structure of the excel file should be of this format.
+            </p>
+            <table class="min-w-full mt-5">
+              <tbody>
+                <tr class="">
+                  <td
+                    class="px-3 py-5 text-[12px] font-semibold tracking-wide text-left"
+                  >
+                    USERNAME
+                  </td>
+                  <td
+                    class="px-3 py-5 text-[12px] font-semibold tracking-wide text-left"
+                  >
+                    PASSWORD
+                  </td>
+                  <td
+                    class="px-3 py-5 text-[12px] font-semibold tracking-wide text-left"
+                  >
+                    FIRST NAME
+                  </td>
+                  <td
+                    class="px-3 py-5 text-[12px] font-semibold tracking-wide text-left"
+                  >
+                    LAST NAME
+                  </td>
+                  <td
+                    class="px-3 py-5 text-[12px] font-semibold tracking-wide text-left"
+                  >
+                    EMAIL
+                  </td>
+                  <td
+                    class="px-3 py-5 text-[12px] font-semibold tracking-wide text-left"
+                  >
+                    TEST ID
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <form action="{% url 'upload-users' %}" class="mt-8 flex flex-col" method="POST" enctype="multipart/form-data">
+              {% csrf_token %}
+              <div class="p-3 border-[1px] border-slate-300 rounded-md">
+                <input required type="file" name='questions' />
+              </div>
+
+              <div class="buttons mt-9 flex gap-4 self-end items-center">
+                <button
+                  id="hide-modal"
+                  class="text-black px-4 py-[10px] font-semibold border-[2px] text-[16px] rounded-md hover:bg-slate-300"
+                >
+                  Cancel
+                </button>
+                <button
+                  onclick=""
+                  class="bg-orange-400 text-white px-4 py-[10px] font-semibold text-[16px] rounded-md hover:bg-orange-500"
+                >
+                  Upload
+                </button>
+              </div>
+              <script src='{% static "portal/users-database.js" %}'></script>
+            </form>
+          </div>
         </div>
       </div>
     </div>
